--- a/package.json
+++ b/package.json
@@ -15,8 +15,12 @@
     "@radix-ui/react-avatar": "^1.1.11",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-label": "^2.1.8",
+    "@radix-ui/react-separator": "^1.1.8",
     "@radix-ui/react-slot": "^1.2.4",
     "@uploadthing/react": "^7.3.3",
+    "@upstash/ratelimit": "^2.0.7",
+    "@upstash/redis": "^1.35.7",
+    "@upstash/workflow": "^0.2.22",
     "bcryptjs": "^3.0.3",
     "better-auth": "^1.4.2",
     "class-variance-authority": "^0.7.1",
